Insights alignment issues, footer changes

--- a/app/assets/styles/modules/_insight.scss
+++ b/app/assets/styles/modules/_insight.scss
@@ -543,7 +543,7 @@
 		top: -74px;
 		float: right;
 		right: 13px;
-		
+		margin:0;
 	width: 51px;
     height: 45px;
     border-radius: 4px;
@@ -558,7 +558,7 @@
     height: 74px;
     border: 1px solid $titleYellow;
     border-radius: 50%;
-    padding: 15px ​5px;
+    padding: 15px 5px;
     display: inline-block;
     text-align: center;
     img {width: 50px;}
