--- a/themes/custom/athena/assets/styles/modules/_insight.scss
+++ b/themes/custom/athena/assets/styles/modules/_insight.scss
@@ -543,7 +543,7 @@
 		top: -74px;
 		float: right;
 		right: 13px;
-		
+		margin:0;
 	width: 51px;
     height: 45px;
     border-radius: 4px;
